--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="resume">
    <div class="resume_left">
      <div class="resume_profile">
-       <img src="My Profile Pic K.A.S.jpeg" width="220" height="150" alt="profile_pic">
+       <img src="img.jpeg" width="220" height="150" alt="profile_pic">
      </div>
      <div class="resume_content">
        <div class="resume_item resume_info">
